--- a/index.html
+++ b/index.html
@@ -54,23 +54,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="copyright">
-                © 2025 Yong Chae Kim All rights reserved.
-            </div>
-            <div class="view-count">
-                <div class="view-count-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                        <circle cx="12" cy="12" r="3"></circle>
-                    </svg>
-                    Today: <span class="today-count">-</span>
-                </div>
-                <div class="view-count-item">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                        <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
-                        <circle cx="12" cy="12" r="3"></circle>
-                    </svg>
-                    Total: <span class="total-count">-</span>
-                </div>
+                © 2024 Settlement Money. All rights reserved.
             </div>
         </div>
     </footer>
