--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="copyright">
-                © 2024 Settlement Money. All rights reserved.
+                © 2025 Yong Chae Kim. All rights reserved.
             </div>
         </div>
     </footer>
